[package]
name = "vector-lite"
version = "0.1.2"
edition = "2024"
description = "The SQLite of Vector Database in Rust."
authors = ["Xiangpeng Hao <haoxiangpeng123@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/XiangpengHao/vector-lite"
documentation = "https://docs.rs/vector-lite/latest/vector_lite/"

[dependencies]
rand = "0.9.0"
flexbuffers = "25.2.10"
serde = { version = "1.0.218", features = ["derive"] }
getrandom = { version = "0.3.1" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.1", features = ["wasm_js"] }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "ann_benchmark"
harness = false


[profile.bench]
lto = true
