[package]
name = "vector-lite"
version = "0.1.12"
edition = "2024"
description = "The SQLite of Vector Database in Rust."
authors = ["Xiangpeng Hao <haoxiangpeng123@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/XiangpengHao/vector-lite"
documentation = "https://docs.rs/vector-lite/latest/vector_lite/"

[dependencies]
rand = "0.9.0"
bincode = "2.0.0"
getrandom = { version = "0.3.1" }
opendal = { version = "0.52.0", features = ["services-s3"] }
async-trait = "0.1.88"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.1", features = ["wasm_js"] }

[dev-dependencies]
criterion = { version = "0.5.1", default-features = false, features = [
	"plotters",
	"cargo_bench_support",
] }
tokio = { version = "1.44.1", features = ["rt", "macros", "rt-multi-thread"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.50"

[[bench]]
name = "ann_benchmark"
harness = false


[profile.bench]
lto = true
